--- a/QuanLyNhanVien/index.html
+++ b/QuanLyNhanVien/index.html
@@ -137,7 +137,8 @@
 								<input type="text"  id="code" class="form-control input-sm"
 									placeholder="Mã Người Dùng">
 							</div>
-							<div class ="text    text-danger"id="tbErrorCode"></div>	
+							<div class ="thong_bao text    text-danger"id="tbErrorCode"></div>
+							<div class ="thong_bao text    text-danger"id="tbErrorLengthCode"></div>	
 							<div class="sp-thongbao" id="tbcode"></div>
 						</div>
 
@@ -149,6 +150,8 @@
 								<input type="name" name="name" id="name" class="form-control input-sm"
 									placeholder="Họ và tên">
 							</div>
+							<div class ="thong_bao text    text-danger"id="tbErrorName"></div>
+							<div class ="thong_bao text    text-danger"id="tbErrorLetterName"></div>	
 							<span class="sp-thongbao" id="tbTen"></span>
 						</div>
 
@@ -160,7 +163,8 @@
 								<input type="email" name="email" id="email" class="form-control input-sm"
 									placeholder="Email">
 							</div>
-
+							<div class ="thong_bao text    text-danger"id="tbErrorEmail"></div>
+							<div class ="thong_bao text    text-danger"id="tbErrorDefineEmail"></div>	
 							<span class="sp-thongbao" id="tbEmail"></span>
 						</div>
 
@@ -172,6 +176,7 @@
 								<input type="text"  id="address" class="form-control input-sm"
 									placeholder="Địa Chỉ">
 							</div>
+							<div class ="thong_bao text    text-danger"id="tbErrorAddress"></div>	
 							<span class="sp-thongbao" id="tbaddress"></span>
 						</div>
 
